# satdb

./: .gitlab-ci.yml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
fetch_service/: tle_updater.py
fetch_service/tests/: test_tle_updater.py
satapp/: __init__.py  admin.py  apps.py  consumers.py  disable_csrf.py  models.py  routing.py  schema.py  tests.py  views.py
satapp/fixtures/: launchers.json  owners.json  payloads.json  satellites.json
satapp/management/commands/: generate_fixtures.py
satapp/migrations/: 0001_initial.py  0002_rename_component_payload.py  0003_remove_launcher_satellite_launcher_satellites_and_more.py  0004_rename_date_launcher_launch_date_and_more.py  0005_satellite_line1_satellite_line2_satellite_sat_id_and_more.py  0006_alter_satellite_owner.py  0007_alter_satellite_sat_id.py
satapp/tests/: test_apis.py  test_models.py  test_views.py
satapp/utils/: tle_updater.py
satdb/: asgi.py  settings.py  urls.py  wsgi.py
satfront/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
satfront/src/: index.html
satfront/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  graphql.module.ts
satfront/src/app/data-component/: data-component.component.html  data-component.component.spec.ts  data-component.component.ts
