[tool.poetry]
name = "satdb"
version = "0.1.0"
description = "A Satellite Database with a TLE update service"
authors = ["Mrugesh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
aniso8601 = "9.0.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
attrs = "23.2.0"
autobahn = "23.6.2"
automat = "22.10.0"
cffi = "1.16.0"
channels-redis = "4.2.0"
channels = {version = "4.0.0", extras = ["daphne"]}
colorama = "0.4.6"
constantly = "23.10.4"
coverage = "7.4.1"
cryptography = "42.0.2"
daphne = "4.1.0"
django-channels-graphql-ws = "1.0.0rc6"
django-cors-headers = "4.3.1"
django = "4.2.10"
exceptiongroup = "1.2.0"
frozenlist = "1.4.1"
graphene-django = "3.2.0"
graphene = "3.3"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
hyperlink = "21.0.0"
idna = "3.6"
incremental = "22.10.0"
iniconfig = "2.0.0"
msgpack = "1.0.7"
multidict = "6.0.5"
nest-asyncio = "1.6.0"
packaging = "23.2"
pluggy = "1.4.0"
promise = "2.3"
pyasn1-modules = "0.3.0"
pyasn1 = "0.5.1"
pycparser = "2.21"
pyopenssl = "24.0.0"
pytest-django = "4.8.0"
pytest = "8.0.0"
redis = "5.0.1"
service-identity = "24.1.0"
setuptools = "69.0.3"
six = "1.16.0"
sqlparse = "0.4.4"
text-unidecode = "1.3"
tomli = "2.0.1"
twisted-iocpsupport = "1.0.4"
twisted = {version = "23.10.0", extras = ["tls"]}
txaio = "23.1.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
websockets = "12.0"
yarl = "1.9.4"
zope-interface = "6.1"
pytest-asyncio = ">=0.23.6"
pytest-mock = ">=3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
